[package]
name = "redproxy-rs"
version = "0.9.0"
authors = ["Bearice Ren <bearice@icybear.net>"]
edition = "2021"
default-run = "redproxy-rs"

[[bin]]
name = "redproxy-rs"
path = "src/main.rs"

[features]
default = ["quic","metrics","embedded-ui"]
quic = ["quinn","futures-util","pin-project-lite"]
metrics = ["axum","tower","tower-http","prometheus","lazy_static"]
embedded-ui = ["metrics"]

[dependencies]
milu = { path = "milu" }
tokio = { version = "1.25.0", features = ["full"] }
tokio-rustls = { version="0.23.4", features = ["dangerous_configuration"] }
tokio-util = {version="0.7.7", features = ["full"]}
bytes = "1.4.0"
rustls-pemfile = "1.0.2"
webpki-roots = "0.22.5"
async-trait = "0.1.68"
easy-error = "1.0.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
yaml-rust = "0.4"
serde = { version = "1.0", features = ["derive","rc"] }
serde_yaml = "0.9.21"
serde_json = "1.0"
clap = "4.0"
futures = "0.3.25"
cidr = "0.2.1"
rand = "0.8.5"
libc = "0.2"
trust-dns-resolver = "0.22.0"
chashmap-async = "0.1.0"
lru = "0.10.0"

# features quic
quinn = { version = "0.9", optional = true}
futures-util = { version = "0.3.24", optional = true}
pin-project-lite = { version = "0.2.9", optional = true }

# features metrics
axum = { version = "0.6", optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.3", optional = true, features = ["add-extension","fs","set-header","trace"] }
prometheus = {version = "0.13.3", optional = true, features = ["process"] }
lazy_static = { version = "1", optional = true }

[target.'cfg(not(target_os = "windows"))'.dependencies]
nix = { version = "0.26"}

[target.'cfg(target_os = "windows")'.dependencies]
winapi = "0.3.9"

# [target.'cfg(target_os = "linux")'.dependencies]
# tokio-pipe = "0.2.12"

[dev-dependencies]
tokio-test = "0.4.2"
test-log = { version = "0.2.12", default-features = false, features = ["trace"] }

[build-dependencies]
mime_guess = "2.0.4"

[workspace]
members = ["milu"]

[profile.release]
panic = 'abort'

[profile.dev]
panic = 'abort'
