[package]
name = "redproxy-rs"
version = "0.9.1"
authors = ["Bearice Ren <bearice@icybear.net>"]
edition = "2024"
default-run = "redproxy-rs"

[[bin]]
name = "redproxy-rs"
path = "src/main.rs"

[features]
default = ["quic","metrics","embedded-ui"]
quic = ["quinn","futures-util","pin-project-lite"]
metrics = ["axum","tower","tower-http","prometheus","lazy_static"]
embedded-ui = ["metrics"]

[dependencies]
milu = { path = "milu" }
tokio = { version = "1.45.1", features = ["full"] }
tokio-rustls = { version="0.26" }
rustls = {version = "0.23"}
tokio-util = {version="0.7", features = ["full"]}
bytes = "1.4.0"
rustls-pemfile = "2.2"
webpki-roots = "1.0"
async-trait = "0.1"
easy-error = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
yaml-rust = "0.4"
serde = { version = "1.0", features = ["derive","rc"] }
serde_yaml_ng = "0.10"
serde_json = "1.0"
clap = "4.5"
futures = "0.3.25"
cidr = "0.3"
rand = "0.9"
libc = "0.2"
hickory-resolver = "0.25"
chashmap-async = "0.1.0"
lru = "0.15"

# features quic
quinn = { version = "0.11", optional = true}
futures-util = { version = "0.3.24", optional = true}
pin-project-lite = { version = "0.2.9", optional = true }

# features metrics
axum = { version = "0.8", optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", optional = true, features = ["add-extension","fs","set-header","trace"] }
prometheus = {version = "0.14", optional = true, features = ["process"] }
lazy_static = { version = "1", optional = true }

[target.'cfg(not(target_os = "windows"))'.dependencies]
nix = { version = "0.30" , features = ["socket","net","zerocopy","uio","fs"] }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = {version = "0.3.9", features = ["winsock2","in6addr","inaddr","ws2def","ws2ipdef"] }

# [target.'cfg(target_os = "linux")'.dependencies]
# tokio-pipe = "0.2.12"

[dev-dependencies]
tokio-test = "0.4.2"
test-log = { version = "0.2.11", default-features = false, features = ["trace"] }

[build-dependencies]
mime_guess = "2.0.4"

[workspace]
members = ["milu"]

[profile.release]
panic = 'abort'

[profile.dev]
panic = 'abort'
