[package]
name = "redproxy-rs"
version = "0.10.0"
authors = ["Bearice Ren <bearice@icybear.net>"]
edition = "2024"
default-run = "redproxy-rs"

[[bin]]
name = "redproxy-rs"
path = "src/main.rs"

[features]
default = ["quic","metrics","embedded-ui","ssh"]
quic = ["quinn","futures-util","pin-project-lite"]
metrics = ["axum","tower","tower-http","prometheus"]
embedded-ui = ["metrics"]
ssh = ["russh"]

[dependencies]
milu = { path = "milu" }
tokio = { version = "1.49.0", features = ["full"] }
tokio-rustls = { version="0.26" }
rustls = {version = "0.23", features = ["aws_lc_rs"], default-features = false}
aws-lc-rs = "1.16"
tokio-util = {version="0.7", features = ["full"]}
bytes = "1.11.0"
rustls-pemfile = "2.2"
webpki-roots = "1.0"
async-trait = "0.1"
anyhow = {version = "1.0", features = ["backtrace"]}
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive","rc"] }
serde_yaml_ng = "0.10"
serde_json = "1.0"
clap = "4.5"
futures = "0.3.25"
cidr = "0.3"
rand = "0.9"
libc = "0.2"
hickory-resolver = "0.25"
chashmap-async = "0.1.0"
lru = "0.16"
url = "2.5.8"
base64 = "0.22.1"
hyper = { version = "1.8", features = ["http1", "http2", "server", "client"] }
hyper-util = { version = "0.1", features = ["full"] }
h2 = "0.4"

# features quic
quinn = { version = "0.11", optional = true}
futures-util = { version = "0.3.24", optional = true}
pin-project-lite = { version = "0.2.9", optional = true }

# features metrics
axum = { version = "0.8", optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", optional = true, features = ["add-extension","fs","set-header","trace"] }
prometheus = {version = "0.14", optional = true, features = ["process"] }

# features ssh
russh = { version = "0.56.0", optional = true }

# unix deps
[target.'cfg(not(target_os = "windows"))'.dependencies]
nix = { version = "0.30" , features = ["socket","net","zerocopy","uio","fs"] }

# windows deps
[target.'cfg(target_os = "windows")'.dependencies]
winapi = {version = "0.3.9", features = ["winsock2","in6addr","inaddr","ws2def","ws2ipdef"] }

# [target.'cfg(target_os = "linux")'.dependencies]
# tokio-pipe = "0.2.12"

[dev-dependencies]
tokio-test = "0.4.5"
test-log = { version = "0.2.19", default-features = false, features = ["trace"] }
tempfile = "3.24"
hyper = { version = "1.8", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }

[build-dependencies]
mime_guess = "2.0.4"

[workspace]
members = ["milu"]

[profile.release]
panic = 'abort'

[profile.dev]
panic = 'abort'
