[package]
name = "milu"
version = "0.1.0"
edition = "2018"

[dependencies]
nom = "7"
nom_locate = { git = "https://github.com/fflorent/nom_locate.git" }
regex = "1"
# dyn-clone = "1"
easy-error = "1"
log = "0.4"

[dev-dependencies]
clap = "~2.33"
rustyline = "9"
rustyline-derive = "0.5.0"
nix = "0.22.1"
