[package]
name = "milu"
version = "0.2.1"
edition = "2018"

[dependencies]
nom = "8"
nom_locate = "4.1.0"
regex = "1"
easy-error = "1"
tracing = "0.1"
async-trait = "0.1"

[dev-dependencies]
clap = "4.5"
rustyline = "16"
rustyline-derive = "0.11"
nix = {version = "0.30",features = ["fs"]}
tokio-test = "0.4"
tokio = { version = "1", features = ["full"] }
