[package]
name = "milu"
version = "0.2.1"
edition = "2024"

[dependencies]
nom = "8"
nom_locate = "5"
nom-language = "0.1"
regex = "1"
anyhow = "1.0"
tracing = "0.1"
async-trait = "0.1"

[dev-dependencies]
clap = "4.5"
rustyline = "17"
rustyline-derive = "0.11"
nix = {version = "0.30",features = ["fs"]}
tokio-test = "0.4"
tokio = { version = "1", features = ["full"] }
